Made everything single page again, fixed stuck back button & made the 'not enough answers' error

--- a/Blok 7 + 8/Front-end & Back-end Challenges/Front-end Challenge/css/style.css
+++ b/Blok 7 + 8/Front-end & Back-end Challenges/Front-end Challenge/css/style.css
@@ -22,6 +22,43 @@ h1.counter {
     padding: 0 50px;
 }
 
+h1.title {
+    color: #233fff;
+    font-weight: 700;
+}
+h1.statement {
+    font-weight: 500;
+}
+button[disabled] {
+    background-color: #a3aeff !important;
+    cursor: not-allowed !important;
+}
+
+button.mainButton {
+    background-color: #233fff;
+    border: 5px solid transparent;
+    border-radius: 15px;
+    padding: 25px 100px;
+    
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 100%;
+
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+button.mainButton:hover {
+    cursor: pointer;
+    background-color: #001eef;
+    transition: all .15s;
+}
+
+
+
+/* Start Page  */
 div.startContainer {
     background-color: white;
     padding: 50px;
@@ -38,32 +75,10 @@ div.startContainer h1 {
 div.startContainer h2 {
     font-size: 1.4em;
 }
-div.startContainer button,
-div.importanceContainer button {
-    background-color: #233fff;
-    border: 5px solid transparent;
-    border-radius: 15px;
-    padding: 25px 100px;
-    
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 100%;
-
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-div.startContainer button:hover,
-div.importanceContainer button:hover {
-    cursor: pointer;
-    background-color: #001eef;
-    transition: all .15s;
-}
 
 
 
+/* Vote Page  */
 div.statementContainer {
     height: 115vh;
 }
@@ -72,62 +87,6 @@ div.statementContainer > div {
     top: 30%;
     transform: translateY(-30%);
 }
-
-
-
-div.importanceContainer h1 {
-    width: 65%;
-    display: inline-block;
-}
-div.importanceContainer button {
-    padding: 15px 20px;
-    display: inline-block;
-    
-    position: relative;
-    top: 100%;
-    left: auto;
-    transform: translateY(-50%);
-}
-div.importanceContainer,
-div.errorContainer {
-    height: auto;
-}
-
-div.errorContainer {
-    padding: 30px 0;
-    border-radius: 15px;
-    background: #fcdbe1;
-}
-div.errorContainer h1 {
-    text-align: center;
-    font-size: 28px;
-    font-weight: 700;
-    color: #eb2045;
-}
-div.errorContainer h2 {
-    text-align: center;
-    font-size: 20px;
-}
-
-div.checkboxContainer {
-    display: flex;
-    align-items: right;
-    justify-content: space-between;
-}
-
-
-h1.title {
-    color: #233fff;
-    font-weight: 700;
-}
-h1.statement {
-    font-weight: 500;
-}
-button[disabled] {
-    background-color: #a3aeff !important;
-    cursor: not-allowed !important;
-}
-
 
 div.buttonContainer {
     position: fixed;
@@ -149,27 +108,43 @@ div.buttonContainer > div {
 
 
 
-.option::before {
-    top: 12px;
-    left: 8px;
-    transform: scale(.45);
-    width: 24px;
-    height: 24px;
-    border-radius: 24px;
+/* Importance Page  */
+div.importanceContainer {
+    height: auto;
 }
-.option > .checkbox {
-    width: 12px;
-    height: 12px;
-    background-color: grey;
+div.impTextContainer h1 {
+    width: 65%;
+    display: inline-block;
+}
+div.importanceContainer button {
+    padding: 15px 20px;
+    display: inline-block;
+    
+    position: relative;
+    top: 100%;
+    left: auto;
+    transform: translateY(-50%);
 }
 
-.importanceContainer {
-    /* background-color: white;
-    width: 40%;
-    height: 50vh;
+div.errorContainer {
+    height: auto;
+    padding: 30px 0;
     border-radius: 15px;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 50%); */
+    background: #fcdbe1;
+}
+div.errorContainer h1 {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    color: #eb2045;
+}
+div.errorContainer h2 {
+    text-align: center;
+    font-size: 20px;
+}
+
+div.impCheckboxContainer {
+    display: flex;
+    align-items: right;
+    justify-content: space-between;
 }
